crates/toml_edit/fixtures/invalid/float/double-point-1.stderr
TOML parse error at line 1, column 20
  |
1 | double-point-1 = 0..1
  |                    ^
Invalid floating-point number
Expected digit
